--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,3 +44,24 @@ services:
     depends_on:
 
     - "zookeeper"
+
+  stedi:
+
+    image: scmurdock/stedi
+
+    ports:
+
+    - "4567:4567"
+
+    environment:
+
+      REDIS_HOST: "redis"
+      REDIS_PORT: "6379"
+      REDIS_DB: "0"
+      KAFKA_BROKER: "kafka:0"
+      KAFKA_RISK_TOPIC: "customer-risk-topic"
+
+    depends_on:
+
+      - "redis"
+      - "kafka"
