--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,17 @@ version: '3.7'
 
 services:
 
+  redis:
+    image: redis:6.0.6
+
+    ports:
+    - "6379"
+
+    
+
   zookeeper:
 
-    image: confluentinc/cp-zookeeper:5.2.2
+    image: confluentinc/cp-zookeeper:5.5.2
 
     ports:
 
@@ -21,7 +29,7 @@ services:
 
   kafka:
 
-    image: confluentinc/cp-kafka:5.2.2
+    image: confluentinc/cp-kafka:5.5.1
 
     ports:
 
