Added envoronment and depandancies for stedi

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,3 +60,15 @@ services:
     ports:
 
     - "4567:4567"
+
+    environment:
+      REDIS_HOST: "redis"
+      REDIS_PORT: "6379"
+      REDIS_DB: "0"
+      KAFKA_BROKER: "kafka:0"
+      KAFKA_RISK_TOPIC: "customer-risk-topic"
+
+    depends_on:
+
+      - "redis"
+      - "kafka"
