Connect stedi to kafka and redis

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,6 +69,10 @@ services:
 
       REDIS_DB: "0"
 
+      STEDI_REDIS_CONNECT: "redis:6379"
+
+      STEDI_KAFKA_CONNECT: "kafka:19092"
+
       KAFKA_BROKER: "kafka:0"
 
       KAFKA_RISK_TOPIC: "customer-risk-topic"
