--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,10 +69,15 @@ services:
 
       REDIS_DB: "0"
 
+      STEDI_REDIS_CONNECT: "redis:6379"
+
+      KAFKA_HOST: "kafka"
+
       KAFKA_BROKER: "kafka:0"
 
       KAFKA_RISK_TOPIC: "customer-risk-topic"
-
+      
+      STEDI_KAFKA_CONNECT: "kafka:19092"
     depends_on:
 
       - "redis"
